<resources>
    <string name="app_name">GroWiser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plantCare">Plant Care</string>
    <string name="plantGallery">Plant Gallery</string>
    <string name="plantPredict">Plant Predict</string>

    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting">Setting</string>

    <string name="nav_header_title">Bella</string>
    <string name="nav_header_subtitle">bella@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="title_activity_dashboard">dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>